Fix Card types tags stays behind @ image hover

--- a/client/src/components/RecipeCard.module.css
+++ b/client/src/components/RecipeCard.module.css
@@ -53,6 +53,8 @@
     margin: .1rem;
     width: fit-content;
     border-radius: .225rem;
+
+    z-index: 10;
 }
 
 .active {
